@@ -21,7 +21,7 @@ LIBFILENAME     = $(call mklibfilename,HelloService,$(VERSION))
 SONAME          = $(call mksoname,HelloService,$(SOVERSION))
 LIBNAME         = $(call mklibname,HelloService)
 
-TARGETS		= $(CLIENT) $(NAME) $(LIBFILENAME) $(SONAME) $(LIBNAME) $(SERVER)
+TARGETS		= $(CLIENT) $(LIBFILENAME) $(SONAME) $(LIBNAME) $(SERVER)
 
 OBJS		= Hello.o
 
