@@ -17,7 +17,7 @@
 // configure script from the gcc-2.8.1 distribution.
 //
 
-#if defined(__linux__) || defined(__FreeBSD__) || defined(__sun)
+#if defined(__linux) || defined(__FreeBSD__) || defined(__sun)
 #   define HAVE_INTTYPES_H 1
 #   define TIME_WITH_SYS_TIME 1
 #   define HAVE_BCMP 1
@@ -59,6 +59,8 @@
 #   define WCHAR_TYPE_SIZE 2
 #elif (defined(__linux) || defined(__FreeBSD__)) && (defined(__i386) || defined(__x86_64)) \
       || defined (__sun)
+#   define WCHAR_TYPE_SIZE 4
+#elif defined(__linux) && defined(__sparc__)
 #   define WCHAR_TYPE_SIZE 4
 #else
 #   error "unsupported operating system or platform"
