@@ -6,6 +6,11 @@ Changes since version 1.1.0
 
 - Added menu with several options to throughput demo.
 
+- Added Linux/SPARC port from Ferris McCormick
+
+- Fixed a bug where daemonized Ice::Application wouldn't shutdown
+  properly.
+
 - Major Freeze update:
 
   - Removed the lowest Freeze layer. You should use instead Berkeley
